<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back5"
        tools:context=".CreatAcount">
    <TextView
        android:id="@+id/detal"
        android:layout_width="295dp"
        android:layout_height="79dp"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/fill_the_following_information_to_create_an_account"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="252dp"
        android:layout_height="185dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detal" />

    <TextView
        android:id="@+id/name"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/enter_your_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/name_input"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_image_view" />


    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/name"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/my_image_view" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/enter_id_number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_input"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/id_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/id"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/id"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/enter_your_phone"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/phone_input"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/phone_number"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phone_label"
            app:layout_constraintTop_toBottomOf="@+id/id_input" />

        <TextView
        android:id="@+id/license"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/driving_license_number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/email_input"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_label" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="179dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/driving_license"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/license"
            app:layout_constraintTop_toBottomOf="@+id/phone_input" />

        <TextView
        android:id="@+id/password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/enter_location"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/phone_input"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/license" />


        <EditText
            android:id="@+id/license_input"
            android:layout_width="184dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/location"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@id/password_label"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/enter_your_user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/additional_input1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <EditText
            android:id="@+id/additional_input1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/user_name"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/username"
            app:layout_constraintTop_toBottomOf="@+id/license_input" />

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/enter_password"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/pass_input"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/info_2"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password"
            app:layout_constraintTop_toBottomOf="@+id/additional_input1" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purble"
            android:padding="16dp"
            android:text="@string/next"
            android:textColor="#ffff"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_goneMarginTop="40dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>